# mcp-server-nih-reporter

./: .cfignore  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  app.yaml  cloudbuild.yaml  manifest.yaml  opencode.jsonc  pyproject.toml  requirements-databricks.txt  requirements.txt  test_api_limit.py
.agents/skills/mcp-builder/references/: python_mcp_server.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
.zed/: tasks.json
agent/: agent.py  agent_gsai.py  agent_gsai_phoenix.py
docs/: SBX_PATTERNS.md
eval/databricks_eval/: api_client.py  eval_reporter_2.xlsx  generate_ground_truth.py  nih_reporter_eval.csv  nih_reporter_ground_truth.csv  processors.py  query_reporter_api.py  query_specs.py
eval/phoenix/: README.md  agent.py  create_dataset.py  datasets.yaml  run_experiment.py
eval/phoenix/datasets/: reporter-eval-scope-0.csv  reporter-test-2.csv
eval/phoenix/datasets/reporter-eval-0/examples/: reporter-eval-0.csv
eval/phoenix/datasets/reporter-eval-scope/: create_dataset.py  run_experiment.py
eval/phoenix/datasets/reporter-eval-scope/examples/: reporter-eval-scope-1.csv
eval/phoenix/datasets/reporter-eval-test-3/: create_dataset.py
eval/phoenix/datasets/reporter-eval-test-3/examples/: reporter-test-3.csv
eval/phoenix/datasets/reporter-eval-test-3/groundtruth/: q04.py  q05.py  q06.py  q07.py  q08.py  q10.py  q11.py  q12.py  question_utils.py
eval/phoenix/datasets/reporter-test-2/: create_dataset.py  run_experiment.py
eval/phoenix/datasets/reporter-test-2/examples/: reporter-test-2.csv
eval/phoenix/judges/: __init__.py  correctness_judge.py  relevance_judge.py
eval/phoenix/prompts/: system_prompt_v1.txt  system_prompt_v2.txt  system_prompt_v3.txt  system_prompt_v4.txt
eval/phoenix/questions/: q11.py  q12.py
src/reporter/: app.py  prompts.py  tools.py  utils.py
src/reporter/instructions/: __init__.py  server_instructions.txt
src/reporter/models/: __init__.py  advanced_text_search.py  application_type.py  funding_mechanism.py  funding_mechanism_metadata.py  include_field.py  models.py  nih_agency.py  po_name.py  project_number.py  search_params.py  spending_categories.py  state_code.py
src/reporter/skills/award-type-lookup/: SKILL.md
src/reporter/skills/spending-categories/: SKILL.md
src/reporter/tools/: __init__.py  create_search_dashboard.py  find_project_ids.py  get_portfolio_crosstab.py  get_project_information.py  get_project_table.py  get_search_preview.py  get_search_summary.py  get_top_awarded.py  search_spending_categories.py
tests/: test_spending_categories.py
