[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.2.2",
    "asyncio>=3.4.3",
    "fastmcp[apps]>=2.12.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.1",
    "pydantic>=2.11.7",
    "requests>=2.33.0",
    "starlette>=0.47.2",
    "uvicorn>=0.37.0",
    "mcp-data-check>=0.1.0",
    "prefab-ui>=0.19.1",
    "langchain>=1.3.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "certifi>=2026.4.22",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
