[project]
name = "reporter"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.2.2",
    "asyncio>=3.4.3",
    "fastmcp[apps]>=2.12.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.1",
    "pydantic>=2.11.7",
    "requests>=2.33.0",
    "starlette>=0.47.2",
    "uvicorn>=0.37.0",
    "prefab-ui>=0.20.2",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "arize-phoenix>=18.0.0",
    "arize-phoenix-client>=2.13.0",
    "arize-phoenix-evals>=3.1.1",
    "langchain>=1.3.14",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "mcp-data-check>=0.6.1",
    "openinference-instrumentation-langchain>=0.1.67",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "prefab-ui>=0.20.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporter"]
